fixed test cases and changed warehouse to use map to store items/locations